Fix scrolling on mobile

--- a/wp-content/themes/sutunam/scss/global/_general.scss
+++ b/wp-content/themes/sutunam/scss/global/_general.scss
@@ -13,6 +13,7 @@ body {
     color: $header-bg;
     @include font('font-roboto-bold');
     @include font-smoothing(antialiased);
+    -webkit-transform: translate3d(0, 0, 0);
 }
 
 img {
